--- a/MingServer.conf
+++ b/MingServer.conf
@@ -3,8 +3,10 @@
     mingCacheModule = MingMod
 </app>
 <obj>
-    #mingCacheProxy
+    #mingCache
     mingCacheObj = DCache.MingProxyServer.ProxyObj@tcp -h 172.16.8.171 -t 60000 -p 14611
+    #ESDriver
+    esObj = FCS.ESDriverServer.ESDriverObj@tcp -h 172.16.8.73 -t 60000 -p 16743:tcp -h 172.16.11.250 -t 60000 -p 24321
 </obj>
 <db>
     <daka>
