--- a/MingServer.conf
+++ b/MingServer.conf
@@ -1,25 +1,34 @@
 <app>
-    #ming缓存模块
-    mingCacheModule = MingMod
+
 </app>
 <obj>
-    #mingCache
-    mingCacheObj = DCache.MingProxyServer.ProxyObj@tcp -h 172.16.8.171 -t 60000 -p 14611
     #ESDriver
     esObj = FCS.ESDriverServer.ESDriverObj@tcp -h 172.16.8.73 -t 60000 -p 16743:tcp -h 172.16.11.250 -t 60000 -p 24321
 </obj>
+
+<dcache>
+    <ming>
+        module = MingMod
+        obj = DCache.MingProxyServer.ProxyObj@tcp -h 172.16.8.170 -t 60000 -p 12152
+    </ming>
+    <cnews>
+        module = CNewsDetailUP
+        obj = DCache.CNewsProxyServer.ProxyObj@tcp -h 172.16.8.161 -t 60000 -p 22883
+    </cnews>
+</dcache>
+
 <db>
     <daka>
-        dbType=mysql
-        host =172.16.8.140
+        dbType = mysql
+        host = 172.16.8.140
         port = 3306
         user = taf
         password = taf2015
         db_name = db_daka
     </daka>
     <comment>
-        dbType=mysql
-        host =172.16.8.140
+        dbType = mysql
+        host = 172.16.8.140
         port = 3306
         user = taf
         password = taf2015
