--- a/MingServer.conf
+++ b/MingServer.conf
@@ -7,7 +7,7 @@
     esObj = FCS.ESDriverServer.ESDriverObj@tcp -h 172.16.8.73 -t 60000 -p 16743:tcp -h 172.16.11.250 -t 60000 -p 24321
 </obj>
 
-<dcache>
+<dCache>
     <ming>
         module = MingMod
         obj = DCache.MingProxyServer.ProxyObj@tcp -h 172.16.8.170 -t 60000 -p 12152
@@ -16,7 +16,7 @@
         module = CNewsDetailUP
         obj = DCache.CNewsProxyServer.ProxyObj@tcp -h 172.16.8.161 -t 60000 -p 22883
     </cnews>
-</dcache>
+</dCache>
 
 <db>
     <daka>
