--- a/MingServer.conf
+++ b/MingServer.conf
@@ -1,22 +1,27 @@
 <app>
-
+    #HTTP开关 true-开启 false-关闭
+    isHttpOn = true
 </app>
 
 <obj>
     #ESDriver
-    esObj = FCS.ESDriverServer.ESDriverObj@tcp -h 172.16.8.73 -t 60000 -p 16743:tcp -h 172.16.11.250 -t 60000 -p 24321
+    esObj = FCS.ESDriverServer.ESDriverObj@tcp -h tcp -h 172.16.8.73 -t 20000 -p 16743
 </obj>
 
-<dCache>
+<DCache>
     <ming>
         module = MingMod
         obj = DCache.MingProxyServer.ProxyObj@tcp -h 172.16.8.170 -t 60000 -p 12152
     </ming>
     <cnews>
         module = CNewsDetailUP
-        obj = DCache.CNewsProxyServer.ProxyObj@tcp -h 172.16.8.161 -t 60000 -p 22883
+        obj = DCache.CNewsProxyServer.ProxyObj@tcp -h 172.16.8.169 -t 60000 -p 18595
     </cnews>
-</dCache>
+    <PStock>
+         module = PStockETag
+         obj = DCache.PStockProxyServer.ProxyObj@tcp -h 172.16.8.123 -t 60000 -p 24360
+    </PStock>
+</DCache>
 
 <db>
     <daka>
