--- a/config/config.conf
+++ b/config/config.conf
@@ -7,7 +7,7 @@
             #logpath=/tmp
             <MingApp.MingServer.MingHelloObjAdapter>
                 allow
-                endpoint=tcp -h 127.0.0.1 -p 20230 -t 60000
+                endpoint=tcp -h 127.0.0.1 -p 10015 -t 60000
                 handlegroup=MingApp.MingServer.MingHelloObjAdapter
                 maxconns=200000
                 protocol=taf
@@ -18,6 +18,19 @@
                 shmkey=0
                 threads=1
             </MingApp.MingServer.MingHelloObjAdapter>
+            <MingApp.MingServer.MingHttpObjAdapter>
+                allow
+                endpoint=tcp -h 127.0.0.1 -p 10016 -t 60000
+                handlegroup=MingApp.MingServer.MingHttpObjAdapter
+                maxconns=200000
+                protocol=not_taf
+                queuecap=10000
+                queuetimeout=60000
+                servant=MingApp.MingServer.MingHttpObj
+                shmcap=0
+                shmkey=0
+                threads=1
+            </MingApp.MingServer.MingHttpObjAdapter>
         </server>
     </application>
 </taf>
